# FX-Text-processor-3

./: .gitignore  .isort.cfg  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  activate_project.sh  check.sh  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements-linux.txt  requirements-security.txt  requirements-windows.txt  requirements.txt
.ai/: PROJECT_CONTEXT.md  project_context.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
backup_code/crypto_backup/: test_config.py  test_crypto_service.py  test_hashing.py  test_protocols.py  test_signatures.py  test_symmetric.py  test_utils.py
backup_code/crypto_backup_20260208/: asymmetric.py  crypto_service.py  secure_storage.py  test_performance.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  PROMPT_TEMPLATES.md  SECURITY_ARCHITECTURE.md  SECURITY_SETUP.md  approval_workflow.md  form_designer.md  form_history.md  template_library.md
docs/finalizing_modules/: security_auth_int.md
old_docs/: FX890_COMPATIBILITY.md  PROMPT_TEMPLATES.md  project_context.md
scripts/: benchmark_comparison.py  demo_pqc.py  honest_benchmark.py
src/: __init__.py  app_context.py
src/barcode/: barcode_generator.py  matrix2d_generator.py
src/barcodegen/: __init__.py  barcode_generator.py  matrix2d_generator.py
src/documents/: __init__.py
src/documents/constructor/: __init__.py  excel_import.py  field_builder.py  field_palette.py  form_constructor.py  form_status.py  form_validator.py  formula_engine.py  input_mask.py  style_manager.py  table_schema.py  variable_parser.py
src/documents/format/: __init__.py  document_format.py  migration.py  template_format.py
src/documents/format/json_schema/: __init__.py  document_v1.0.json  validator.py
src/documents/printing/: __init__.py  barcode_adapter.py  barcode_renderer.py  document_renderer.py  paragraph_renderer.py  run_renderer.py  table_renderer.py
src/documents/types/: __init__.py  document_type.py  index_formatter.py  index_template.py  inheritance.py  registry.py  type_schema.py
src/documents/types/builtin/: __init__.py  base.py  invoice.py  verbal_note.py
src/escp/commands/: __init__.py  barcode.py  charset.py  fonts.py  graphics.py  hardware.py  line_spacing.py  page_control.py  positioning.py  print_quality.py  shading.py  sizing.py  special_effects.py  text_formatting.py
src/form/: batch_processor.py  export_import.py  form_builder.py  form_elements.py  form_palette.py  form_schema.py  style_manager.py  template_manager.py  validation.py  variable_parser.py
src/model/: barcode.py  barcodegen.py  document.py  enums.py  paragraph.py  run.py  section.py  table.py
src/printer/: base_adapter.py  cups_adapter.py
src/security/: __init__.py  erasure.py
src/security/.crypto_backup_20260208/: blake3_hash.py  exceptions.py  kdf.py  passwords.py  platform_security.py  pqc.py  protocols.py  standards.py  symmetric.py  utils.py
src/security/audit/: __init__.py  events.py  logger.py
src/security/auth/: __init__.py  auth_service.py  code_service.py  fido2_service.py  password.py  password_service.py  permissions.py  permissions_service.py  second_factor.py  second_factor_service.py  session.py  session_service.py  totp_service.py
src/security/auth/second_method/: __init__.py  backup_code_factor.py  code.py  fido2.py  fido2_factor.py  totp.py  totp_factor.py
src/security/blanks/: __init__.py  manager.py  models.py  signer.py  verification.py
src/security/compliance/: __init__.py  anonymization.py  data_export.py  erasure_handler.py  exceptions.py  models.py  retention_policy.py
src/security/crypto/: __init__.py  asymmetric.py  blake3_hash.py  config.py  crypto_service.py  exceptions.py  hashing.py  health.py  kdf.py  key_rotation.py  passwords.py  platform_security.py  pqc.py  protocols.py  secure_storage.py  signatures.py  standards.py  symmetric.py  utils.py
src/security/crypto/advanced/: __init__.py  group_encryption.py  hybrid_encryption.py  key_escrow.py  session_keys.py
src/security/crypto/algorithms/: __init__.py  asymmetric.py  hashing.py  kdf.py  key_exchange.py  signing.py  symmetric.py
src/security/crypto/core/: __init__.py  exceptions.py  metadata.py  protocols.py  registry.py
src/security/crypto/hardware/: __init__.py  apdu_transport.py  backends.py  hardware_crypto.py  openpgp_backend.py
src/security/crypto/service/: __init__.py  crypto_service.py  profiles.py  ui_helpers.py
src/security/crypto/utilities/: __init__.py  config.py  key_management.py  key_rotation.py  migration.py  passwords.py  secure_storage.py  serialization.py  utils.py
src/security/crypto_backup_20260208/: blake3_hash.py  config.py  exceptions.py  hashing.py  key_rotation.py  signatures.py
src/security/integrity/: __init__.py  app_integrity.py  config_integrity.py  exceptions.py  models.py
src/security/lock/: __init__.py  auto_lock.py  exceptions.py  models.py  session_lock.py
src/security/monitoring/: __init__.py  exceptions.py  health_checker.py  models.py
src/security/monitoring/checks/: __init__.py  algorithm_check.py  audit_chain_check.py  config_check.py  device_check.py  entropy_check.py  (+1 more)
src/services/: __init__.py  barcode_service.py
tests/integration/documents/: test_format_integration.py
tests/unit/: test_app_context.py  test_init.py
tests/unit/barcode/: test_barcode_generator.py  test_matrix2d_generator.py
tests/unit/barcodegen/: test_barcode_generator.py  test_matrix2d_generator.py
tests/unit/crypto/: test_hashing.py  test_symmetric.py
tests/unit/documents/: __init__.py  conftest.py
tests/unit/form/: test_export_import.py  test_form_builder.py  test_form_elements.py  test_form_palette.py  test_form_schema.py  test_form_validation.py  test_style_manager.py  test_template_manager.py  test_variable_parser.py
tests/unit/model/: test_barcode.py  test_barcodegen.py  test_enums.py  test_paragraph.py  test_run  test_run.py  test_section.py  test_table.py
tests/unit/security/: test_erasure.py
(+126 files in other folders)
